--- a/index.html
+++ b/index.html
@@ -33,6 +33,9 @@
     <!-- секция слайд -->
     <section class="section_slaid">
         <div class="container">
+            <div class="block_img06">
+                <img src="img/Slaid_TWO/06.png" class="imgSlaid06" alt="" loading="lazy">
+            </div>
             <div class="block_OurNewEvents">
                 <div class="Block_p_OurNewEvents">
                     <p class="p_OurNewEvents">Only in 2021 we have made more than 100,000 orders for you, your loved
@@ -47,16 +50,16 @@
             </div>
 
             <!-- второй слайд -->
-            <div class="swiper">
+            <div class="swiper block_swiper">
                 <!-- Additional required wrapper -->
                 <div class="swiper-wrapper">
                     <!-- Slides -->
                     <div class="swiper-slide">
-                        <div class="block_imgOne">
+                        <div class="block_imgOne imgTwoBlock">
                             <div class="img_block1 margenBlockRight">
                                 <img src="img/Slaid_TWO/01.png" alt="" loading="lazy" class="Slaid_TWO">
                                 <div class="TwoCoffe">
-                                    <p class="P_TWO_COFFEE">TWO COFFEE FOR 1 PRICE</p>
+                                    <p class="P_TWO_COFFEE P_TWOBottom">TWO COFFEE FOR 1 PRICE</p>
                                     <button class="btn_More" type="button">
                                         More
                                     </button>
@@ -65,7 +68,7 @@
                             <div class="img_block1 margenBlockRight">
                                 <img src="img/Slaid_TWO/02.png" alt="" loading="lazy" class="Slaid_TWO">
                                 <div class="TwoCoffe">
-                                    <p class="P_TWO_COFFEE">KITCHEN TOUR</p>
+                                    <p class="P_TWO_COFFEE P_TWOBottom">KITCHEN<br>TOUR</p>
                                     <button class="btn_More" type="button">
                                         More
                                     </button>
@@ -86,8 +89,8 @@
                             <div class="img_block2 margenBlockRight">
                                 <img src="img/Slaid_TWO/04.png" alt="" loading="lazy" class="Slaid_TWO">
                                 <div class="TwoCoffe">
-                                    <p class="P_TWO_COFFEE">OUR INSTAGRAM</p>
-                                    <button class="btn_More" type="button">
+                                    <p class="P_TWO_COFFEE P_TWOINST">OUR<br>INSTAGRAM</p>
+                                    <button class="btn_More top_more" type="button">
                                         More
                                     </button>
                                 </div>
@@ -104,7 +107,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="swiper-slide">Slide 2</div>
+
                 </div>
 
             </div>
