Media_Slaider_One

--- a/index.html
+++ b/index.html
@@ -30,11 +30,111 @@
         </nav>
     </main>
 
-    <!-- секция слайд -->
-    <section class="section_slaid">
+    <!-- секция слайд 1 -->
+    <section class="section_slaid01">
+        <div class="container">
+            <div class="block_OurNewEvents slaid01_block ">
+                <div class="Block_p_OurNewEvents p_New_Our">
+                    <p class="p_OurNewEvents">Have time to buy the most harmonious drinks in the new Starbucks
+                        coffee
+                        and don't forget about the discount! Starbucks
+                        coffee and don't forget about the discount!</p>
+                </div>
+                <div class="OurNewEvents_block">
+                    <h2 class="H2_Our_New">New Our<br><span class="Events_span">Products</span></h2>
+                </div>
+            </div>
+            <!-- первый  слайд -->
+            <div class="swiper block_swiper01">
+                <!-- Additional required wrapper -->
+                <div class="swiper-wrapper block_swiperBottom">
+                    <!-- Slides -->
+                    <div class="swiper-slide">
+                        <div class="block_Cofffe">
+                            <div class="img_blocl_coffe">
+                                <img src="img/Slaid_One/круг.png" alt="" loading="lazy" class="imgSlaid_Kryg">
+                                <img src="img/Slaid_One/01.png" alt="" loading="lazy" class="imgSlaid06">
+                            </div>
+                            <div class="Opisanie_block">
+                                <h2 class="h2_Fast">
+                                    Fast
+                                </h2>
+                                <p class="Fast_p">Our cafe will serve<br>you quickly</p>
+                                <div class="Span_counre_ml">
+                                    <span class="spanCountre">7,45$</span>
+                                    <span class="spam_ml">330 ml</span>
+                                </div>
+                                <button class="btn_BuyProduct">Buy Product</button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="swiper-slide">
+                        <div class="block_Cofffe">
+                            <div class="img_blocl_coffe">
+                                <img src="img/Slaid_One/круг.png" alt="" loading="lazy" class="imgSlaid_Kryg">
+                                <img src="img/Slaid_One/03.png" alt="" loading="lazy" class="imgSlaid06">
+                            </div>
+                            <div class="Opisanie_block">
+                                <h2 class="h2_Fast">
+                                    Fast
+                                </h2>
+                                <p class="Fast_p">Our cafe will serve<br>you quickly</p>
+                                <div class="Span_counre_ml">
+                                    <span class="spanCountre">7,45$</span>
+                                    <span class="spam_ml">330 ml</span>
+                                </div>
+                                <button class="btn_BuyProduct">Buy Product</button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="swiper-slide">
+                        <div class="block_Cofffe">
+                            <div class="img_blocl_coffe">
+                                <img src="img/Slaid_One/круг.png" alt="" loading="lazy" class="imgSlaid_Kryg">
+                                <img src="img/Slaid_One/02.png" alt="" loading="lazy" class="imgSlaid02">
+                            </div>
+                            <div class="Opisanie_block">
+                                <h2 class="h2_Fast">
+                                    Fast
+                                </h2>
+                                <p class="Fast_p">Our cafe will serve<br>you quickly</p>
+                                <div class="Span_counre_ml">
+                                    <span class="spanCountre">7,45$</span>
+                                    <span class="spam_ml">330 ml</span>
+                                </div>
+                                <button class="btn_BuyProduct">Buy Product</button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="swiper-slide">
+                        <div class="block_Cofffe">
+                            <div class="img_blocl_coffe">
+                                <img src="img/Slaid_One/круг.png" alt="" loading="lazy" class="imgSlaid_Kryg">
+                                <img src="img/Slaid_One/04.png" alt="" loading="lazy" class="imgSlaid06">
+                            </div>
+                            <div class="Opisanie_block">
+                                <h2 class="h2_Fast">
+                                    Cappuccino
+                                </h2>
+                                <p class="Fast_p">Our cafe will serve<br>you quickly</p>
+                                <div class="Span_counre_ml">
+                                    <span class="spanCountre">7,45$</span>
+                                    <span class="spam_ml">330 ml</span>
+                                </div>
+                                <button class="btn_BuyProduct">Buy Product</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- секция слайд 2-->
+    <section class="section_slaid02">
         <div class="container">
             <div class="block_img06">
-                <img src="img/Slaid_TWO/06.png" class="imgSlaid06" alt="" loading="lazy">
+                <img src="img/Slaid_TWO/06.png" class="imgSlaid6" alt="" loading="lazy">
             </div>
             <div class="block_OurNewEvents">
                 <div class="Block_p_OurNewEvents">
@@ -50,7 +150,7 @@
             </div>
 
             <!-- второй слайд -->
-            <div class="swiper block_swiper">
+            <div class="swiper block_swiper02">
                 <!-- Additional required wrapper -->
                 <div class="swiper-wrapper">
                     <!-- Slides -->
