--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body class="body">
 
     <!-- Навигационная секция  -->
-    <main class="main">
+    <header class="header">
         <nav class="nav container">
             <div class="logo">
                 <h1 class="StarBucks_Logo"><a href="#" class="a_none">StarBucks</a></h1>
@@ -28,6 +28,79 @@
                 <li><a href="#" class="a_none a_block">Shop</a></li>
             </ul>
         </nav>
+    </header>
+
+    <!-- секция главная  -->
+    <main class="main">
+        <div class="container">
+            <div class="All_block">
+                <div class="One_block">
+                    <h1 class="mainNew_Cafe">New Cafe
+                        <br>by<span class="StarBucks_span"> StarBucks</span>
+                    </h1>
+                    <p class="main_p">Have time to buy the most harmonious drinks in the
+                        <br>new Starbucks coffee and don't forget about the discount!
+                    </p>
+                    <div class="block_two_btn">
+                        <button class="Select_btn">Select a coffee</button>
+                        <button class="More_Btn">More</button>
+                    </div>
+                    <div class="block_Three">
+                        <div class="k_Block">
+                            <h3 class="k9">9k<span class="Span_plus">+</span></h3>
+                            <p class="Premium_Users">Premium Users</p>
+                        </div>
+                        <div class="k_Block">
+                            <h3 class="k9">2k<span class="Span_plus">+</span></h3>
+                            <p class="Premium_Users">Happy Customer</p>
+                        </div>
+                        <div class="k_Block">
+                            <h3 class="k9">28k<span class="Span_plus">+</span></h3>
+                            <p class="Premium_Users">Awards Winning</p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="Two_block">
+                    <div class="line_coffe">
+                        <img src="img/главная/линия.png" alt="" loading="lazy">
+                    </div>
+                    <img src="img/главная/кофе.png" alt="" loading="lazy" class="Main_imgCoffe">
+                    <div class="Plus_block">
+                        <img src="img/главная/плюс.png" alt="" loading="lazy" class="Plus_img">
+                    </div>
+                </div>
+
+            </div>
+            <div class="Block_wehave_main">
+                <div class="Bloock_Star">
+                    <img src="img/главная/десяти_угольник.png" alt="" loading="lazy" class="Star_img">
+                </div>
+                <div class="Block_wehave">
+                    <div class="heart_Block">
+                        <div class="heart_div">
+                            <img src="img/главная/03.png" alt="" loading="lazy" class="heart">
+                        </div>
+                        <h3 class="Tasty">Tasty</h3>
+                        <p class="P_We_hav">We have the most delicious coffee</p>
+                    </div>
+                    <div class="heart_Block">
+                        <div class="heart_div">
+                            <img src="img/главная/04.png" alt="" loading="lazy" class="rocket">
+                        </div>
+                        <h3 class="Tasty">Fast</h3>
+                        <p class="P_We_hav">Our cafe will serve you quickly</p>
+                    </div>
+                    <div class="heart_Block">
+                        <div class="heart_div">
+                            <img src="img/главная/05.png" alt="" loading="lazy" class="heart">
+                        </div>
+                        <h3 class="Tasty">Available</h3>
+                        <p class="P_We_hav">Cafe will serveat the most pleasant prices</p>
+                    </div>
+                </div>
+            </div>
+        </div>
     </main>
 
     <!-- секция слайд 1 -->
