--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 
                 <div class="Two_block">
                     <div class="line_coffe">
-                        <img src="img/главная/линия.png" alt="" loading="lazy">
+                        <img src="img/главная/линия.png" alt="" loading="lazy" class="line_mini">
                     </div>
                     <img src="img/главная/кофе.png" alt="" loading="lazy" class="Main_imgCoffe">
                     <div class="Plus_block">
@@ -72,7 +72,12 @@
                 </div>
 
             </div>
+
+
             <div class="Block_wehave_main">
+                <div class="absolut_block">
+                    <img src="img/главная/маленький_угольник.png" alt="" loading="lazy" class="min_Ygol">
+                </div>
                 <div class="Bloock_Star">
                     <img src="img/главная/десяти_угольник.png" alt="" loading="lazy" class="Star_img">
                 </div>
@@ -91,7 +96,7 @@
                         <h3 class="Tasty">Fast</h3>
                         <p class="P_We_hav">Our cafe will serve you quickly</p>
                     </div>
-                    <div class="heart_Block">
+                    <div class="heart_Block heart_Block_Many">
                         <div class="heart_div">
                             <img src="img/главная/05.png" alt="" loading="lazy" class="heart">
                         </div>
