--- a/index.html
+++ b/index.html
@@ -108,6 +108,36 @@
         </div>
     </main>
 
+    <!-- секция первая -->
+    <section class="section_Two">
+        <div class="container">
+            <div class="Con_block">
+                <div class="WeHere_block">
+                    <img src="img/второй_блок/Stars.png" alt="" loading="lazy" class="Stars_IMG">
+                    <img src="img/второй_блок/зеленый_фон.png" alt="" loading="lazy" class="green_img">
+                    <img src="img/второй_блок/столы.png" alt="" loading="lazy" class="table_img">
+                </div>
+                <div class="WeHere_Two">
+                    <div class="OurNewEvents_block width_H2">
+                        <h2 class="We_make">We make<br><span class="Events_span">delicious</span></h2>
+                    </div>
+                    <p class="p_OurNewEvents Only_in_2021">Only in 2021 we have made more than 100,000 orders for you,
+                        your loved
+                        ones, all of you, and in 2022 we are ready to
+                        destroy the market</p>
+                    <div class="Video_block">
+                        <button class="btn_Start">
+                            <img src="img/второй_блок/запусл.png" alt="" loading="lazy" class="launch_img">Cooking
+                            Process</button>
+                        <img src="img/второй_блок/видео.png" alt="" loading="lazy" class="img_Video">
+                    </div>
+                </div>
+            </div>
+            <img src="img/второй_блок/line.png" alt="" loading="lazy" class="line_Two">
+        </div>
+
+    </section>
+
     <!-- секция слайд 1 -->
     <section class="section_slaid01">
         <div class="container">
