--- a/index.html
+++ b/index.html
@@ -322,6 +322,36 @@
         </div>
     </section>
 
+    <!-- секция низ -->
+    <section class="section_footer">
+        <div class="container">
+            <div class="Block_Our_Contacts">
+                <div class="Our_Contacts">
+                    <div class="OurNewEvents_block width_H2">
+                        <h2 class="We_make">Our<br><span class="Events_span">Contacts</span></h2>
+                    </div>
+                    <p class="p_OurNewEvents block_time">Have time to buy the most harmonious drinks in the new
+                        Starbucks coffee and don't forget about the discount!</p>
+                    <div class="Telefon_instogram">
+                        <img src="img/низ/instogram.png" alt="" loading="lazy" class="img_insta">
+                        <span class="supercoffee">@supercoffee</span>
+                    </div>
+                    <div class="Telefon_instogram">
+                        <img src="img/низ/Telefon.png" alt="" loading="lazy" class="img_insta">
+                        <span class="supercoffee">+7-999-999-99-99</span>
+                    </div>
+                </div>
+                <div class="Img_Our_Contacts">
+                    <img src="img/низ/Stars.png" alt="" loading="lazy" class="Stars_footer_img">
+                    <img src="img/низ/фон_зел.png" alt="" loading="lazy" class="green_Footer_img">
+                    <img src="img/низ/StarBaks.png" alt="" loading="lazy" class="StarBaks_img">
+                </div>
+            </div>
+            <img src="img/низ/линия.png" alt="" loading="lazy" class="line_Footer">
+        </div>
+    </section>
+
+
 
 </body>
 
