--- a/index.html
+++ b/index.html
@@ -351,6 +351,46 @@
         </div>
     </section>
 
+    <!-- низ_Сайта-->
+    <footer class="footer">
+        <div class="container">
+            <div class="block_UL_logo">
+                <h2 class="StarBucks_footer">StarBucks</h2>
+                <ul class="Ul_Main">
+                    <li class="Main_li">Main</li>
+                    <li class="Buy_li">Buy</li>
+                    <li class="Buy_li">More</li>
+                </ul>
+                <ul class="Ul_Main">
+                    <li class="Main_li">We make</li>
+                    <li class="Buy_li">Process</li>
+                </ul>
+                <ul class="Ul_Main">
+                    <li class="Main_li">Products</li>
+                    <li class="Buy_li">Cappuccino</li>
+                    <li class="Buy_li">Fast</li>
+                </ul>
+                <ul class="Ul_Main">
+                    <li class="Main_li">Events</li>
+                    <li class="Buy_li">Drinks</li>
+                    <li class="Buy_li">Eat</li>
+                </ul>
+                <ul class="Ul_Main">
+                    <li class="Main_li">Contacts</li>
+                    <li class="Buy_li">Instagram</li>
+                    <li class="Buy_li">Number</li>
+                </ul>
+                <button class="Arrow_top" type="button">
+                    <img src="img/Footer/стрелка.png" alt="" loading="lazy" class="Arrow_img">
+                </button>
+            </div>
+            <div class="Telrfon_Instogram">
+                <h3 class="h3_Telefon">+7-999-999-99-99</h3>
+                <img src="img/Footer/instogram.png" alt="" loading="lazy" class="instogtam">
+            </div>
+        </div>
+    </footer>
+
 
 
 </body>
