--- a/index.html
+++ b/index.html
@@ -338,7 +338,7 @@
                     </div>
                     <div class="Telefon_instogram">
                         <img src="img/низ/Telefon.png" alt="" loading="lazy" class="img_insta">
-                        <span class="supercoffee">+7-999-999-99-99</span>
+                        <h3 class="supercoffee">+7-999-999-99-99</h3>
                     </div>
                 </div>
                 <div class="Img_Our_Contacts">
