--- a/index.html
+++ b/index.html
@@ -354,8 +354,14 @@
     <!-- низ_Сайта-->
     <footer class="footer">
         <div class="container">
+            <div class="Footer_Arraw_Block">
+                <h2 class="StarBucks_footer StarBucks_block">StarBucks</h2>
+                <button class="Arrow_top StarBucks_block" type="button">
+                    <img src="img/Footer/стрелка.png" alt="" loading="lazy" class="Arrow_img">
+                </button>
+            </div>
             <div class="block_UL_logo">
-                <h2 class="StarBucks_footer">StarBucks</h2>
+                <h2 class="StarBucks_footer StarBucks_none">StarBucks</h2>
                 <ul class="Ul_Main">
                     <li class="Main_li">Main</li>
                     <li class="Buy_li">Buy</li>
@@ -380,7 +386,7 @@
                     <li class="Buy_li">Instagram</li>
                     <li class="Buy_li">Number</li>
                 </ul>
-                <button class="Arrow_top" type="button">
+                <button class="Arrow_top StarBucks_none" type="button">
                     <img src="img/Footer/стрелка.png" alt="" loading="lazy" class="Arrow_img">
                 </button>
             </div>
