--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>StarBucks</title>
+    <link rel="icon" type="image/png" href="img/favicon-16x16.png" sizes="32x32" />
+    <link rel="icon" type="image/png" href="img/favicon-32x32.png" sizes="16x16" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
@@ -24,6 +26,12 @@
                     <a href="#" class="a_none Skrol" data-goto="#header">StarBucks</a>
                 </h1>
             </div>
+
+            <!-- меню бургер -->
+            <div class="menu_burger">
+                <span></span>
+            </div>
+
             <ul class="ul_block ">
                 <li class="li_block">
                     <a href="#" data-goto="#header" class="a_none a_block Skrol">Home</a>
