--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>StarBucks</title>
-    <link rel="icon" type="image/png" href="img/favicon-16x16.png" sizes="32x32" />
-    <link rel="icon" type="image/png" href="img/favicon-32x32.png" sizes="16x16" />
+    <link rel="icon" type="image/png" href="img/favicon-16x16.png" sizes="32x32">
+    <link rel="icon" type="image/png" href="img/favicon-32x32.png" sizes="16x16">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
@@ -22,9 +22,9 @@
     <header class="header" id="header">
         <nav class="nav container">
             <div class="logo">
-                <h1 class="StarBucks_Logo">
+                <h2 class="StarBucks_Logo">
                     <a href="#" class="a_none Skrol" data-goto="#header">StarBucks</a>
-                </h1>
+                </h2>
             </div>
 
             <!-- меню бургер -->
@@ -415,12 +415,10 @@
         </div>
     </footer>
 
-
+    <script src="js/swiper-bundle.js"></script>
+    <script src="js/main.js"></script>
+    <script src="js/slaider.js"></script>
 
 </body>
-
-<script src="js/swiper-bundle.js"></script>
-<script src="js/main.js"></script>
-<script src="js/slaider.js"></script>
 
 </html>
